# redis_timeseries_lines

./: README.md  setup.cfg
examples/: market_data.ipynb  sensor_data.ipynb
src/redis_timeseries_lines/: __init__.py  redis_timeseries_lines.py
tests/: redis_timeseries_lines.ipynb
