[metadata]
name = redis_timeseries_lines
version = 1.0.4
author = Ahmad Azizi
author_email = activepost@gmail.com
description = RedisTimeseriesLines is a redis timeseries management system that ties multiple redis timeseries together and let them to be managed as a whole.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ahmadazizi/redis_timeseries_lines
project_urls =
    Bug Tracker = https://github.com/ahmadazizi/redis_timeseries_lines/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    redis >=4.0

[options.packages.find]
where = src

